# poisson-jump-simulations

./: .gitignore  README.md  pyproject.toml  test.py
configs/examples/: full_study.yaml  optuna_example.yaml  quick_test.yaml
examples/: README.md  cached_example.py  check_data_generation.py  comparison_example copy.py  comparison_example.py  example_result_manager.py  fit_real_data_example.py  full_run.py  plot_stacked_states_real_data.py  rerun_from_hash.py  run_experiment.py  run_single_example.py  simple_example.py  test_visualization.py  visualize_results.py  visualize_single_run.py
experiments/: README.md  compare_grid_optuna.py  diagnose_optuna.py
simulation/: __init__.py  api.py  cache.py  config.py  data_generation.py  hyperparameters.py  metrics.py  models.py  results.py  runner.py
tests/: __init__.py  test_config_validation.py  test_integration.py  test_results.py  test_runner.py
visualization/: README.md  __init__.py  api.py  combine_tables.py  comparison.py  experiment_plots.py  latex_tables.py  optuna_plots.py  results.py  time_series.py  utils.py
